2002-01-02  Bruno Coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/about.c: completed the about box
	* src/gcompris/gcompris.c: disabled gnome crash dialog in full screen
	* xml-i18n: replaced all references to xml-i18n by the newer intltool

	
2002-01-06  Christophe Merlet  <redfox@eikonex.org>

	* src/boards/clickgame.c, src/boards/draw.c, src/boards/menu.c,
	src/boards/paratrooper.c: Reformated somes translated strings.
 
2002-01-02  Bruno Coudoin  <bruno.coudoin@free.fr>
	* src/gcompris/config.c: added support for locale selection
	* boards/locale*: removed locale selection by boards
	* src/boards/locale.c: removed locale selection by boards
	* src/boards/shapegame.c: added capability to edit a puzzle (click on a red point)
	                          save is done with shift+click on any puzzle. The file
	                          /tmp/gcompris-board.xml contains the edited board
	* boards/paintings/kandinky.comp8: creation of this puzzle
	* boards/paintings/board3_1.xml: creation of this puzzle. Make sure to click OK to see it
	* boards/clockgame/clockgame-bg.jpg: creation of this new background by Renaud Blanchard.
	* src/boards/clockgame.c: updated to fit in the new background
	* boards/gcompris/misc/fishingboat.png: redrawed by Renaud
	* src/boards/paratrooper.c: now, a click on the plane and the tux
	* flies


2001-12-26  Bruno Coudoin  <bruno.coudoin@free.fr>
	* boards/missing_letter: added support for xmli18n
	* boards/scales: added support for xmli18n (preparation only since shapegame needs xml rewrite)
	* src/boards/*.c: set to null gcomprisBoard in end_board to avoid problem in bonus
	* src/gcompris/config.c: creation of the configuration window
	* src/gcompris/properties.c: added support for locale property storage

2001-12-24  Bruno Coudoin  <bruno.coudoin@free.fr>
	* src/boards/planegame.c: replaced the plane by a brain new helico
	                          designed by Renaud Blanchard