@@ -3,10 +3,10 @@
   <Shape name="1" pixmapfile="gcompris/gcompris-shapelabel.jpg" type="SHAPE_BACKGROUND"
 	 x="405" y="495" zoomx="1" zoomy="1" position="0"/>
   <Title name="DEGAS Village The Dancing Class 1873" x="394" y="495" justification="GTK_JUSTIFY_CENTER"/>
-  <Shape name="D" pixmapfile="paintings/level4/degas_class-dance_4.png" x="485" y="265" zoomx="1" zoomy="1" position="0"/>
-  <Shape name="A" pixmapfile="paintings/level4/degas_class-dance_1.png" x="320" y="100" zoomx="1" zoomy="1" position="0"/>
-  <Shape name="F" pixmapfile="paintings/level4/degas_class-dance_6.png" x="512" y="430" zoomx="1" zoomy="1" position="0"/>
-  <Shape name="C" pixmapfile="paintings/level4/degas_class-dance_3.png" x="292" y="245" zoomx="1" zoomy="1" position="0"/>
-  <Shape name="B" pixmapfile="paintings/level4/degas_class-dance_2.png" x="513" y="98" zoomx="1" zoomy="1" position="0"/>
-  <Shape name="E" pixmapfile="paintings/level4/degas_class-dance_5.png" x="319" y="410" zoomx="1" zoomy="1" position="0"/>
+  <Shape name="A" pixmapfile="paintings/level4/degas_class-dance_1.png" x="320" y="90"  zoomx="1" zoomy="1" position="0"/>
+  <Shape name="B" pixmapfile="paintings/level4/degas_class-dance_2.png" x="513" y="88"  zoomx="1" zoomy="1" position="0"/>
+  <Shape name="C" pixmapfile="paintings/level4/degas_class-dance_3.png" x="292" y="235" zoomx="1" zoomy="1" position="0"/>
+  <Shape name="D" pixmapfile="paintings/level4/degas_class-dance_4.png" x="485" y="255" zoomx="1" zoomy="1" position="0"/>
+  <Shape name="E" pixmapfile="paintings/level4/degas_class-dance_5.png" x="319" y="400" zoomx="1" zoomy="1" position="0"/>
+  <Shape name="F" pixmapfile="paintings/level4/degas_class-dance_6.png" x="512" y="420" zoomx="1" zoomy="1" position="0"/>
 </ShapeGame>
