@@ -1,6 +1,6 @@
 /* gcompris - wordsgame.c
  *
- * Time-stamp: <2002/01/13 17:56:12 bruno>
+ * Time-stamp: <2002/01/13 22:43:16 bruno>
  *
  * Copyright (C) 2000 Bruno Coudoin
  * 
@@ -230,8 +230,8 @@ gint key_press(guint keyval)
 {
   char str[2];
 
-   if(!get_board_playing())
-     return FALSE;
+  if(!gcomprisBoard)
+    return TRUE;
 
   /* Add some filter for control and shift key */
   switch (keyval)
