@@ -2,13 +2,18 @@
 
 	* src/gcompris/about.c: completed the about box
 	* src/gcompris/gcompris.c: disabled gnome crash dialog in full screen
+	* src/gcompris/gameutil.c: added code in convertUTF8Toisolat1 to replace \ n by real one
 	* xml-i18n: replaced all references to xml-i18n by the newer intltool
-
+	* src/boards/*.c: removed the use of get_board_playing and replaced by a test on gcomprisBoard
+	                  this was creating intermitent problems when leaving a board being redisplayed
+	* src/boards/draw.c: implemented a workaround to avoid grab lock on doubleclick
+	                     fixed third button move even if tool move is not selected
+	* src/boards/shapegame.c: added call to the bonus API.
 	
 2002-01-06  Christophe Merlet  <redfox@eikonex.org>
 
 	* src/boards/clickgame.c, src/boards/draw.c, src/boards/menu.c,
-	src/boards/paratrooper.c: Reformated somes translated strings.
+	* src/boards/paratrooper.c: Reformated somes translated strings.
  
 2002-01-02  Bruno Coudoin  <bruno.coudoin@free.fr>
 	* src/gcompris/config.c: added support for locale selection
